# chicago-budget-explorer

./: .gitignore  CLAUDE.md  README.md
.claude/hooks/: post-agent-quality-gate.py
.github/workflows/: frontend-ci.yml  pipeline-ci.yml
frontend/: CLAUDE.md  README.md  astro.config.mjs  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.mjs  tsconfig.json  vitest.config.ts
frontend/e2e/: README.md  accessibility.spec.ts  budget-data.spec.ts  helpers.ts  landing-page.spec.ts  navigation.spec.ts  simulator.spec.ts  year-selector.spec.ts
frontend/src/components/: BudgetComparison.tsx  BudgetExplorer.tsx  BudgetSummary.tsx
frontend/src/components/__tests__/: BudgetComparison.test.tsx  BudgetExplorer.test.tsx
frontend/src/components/charts/: AppropriationBreakdown.tsx  BudgetTreemap.tsx  DepartmentBar.tsx  (+7 more)
frontend/src/data/: manifest.json
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: colors.ts  comparison-engine.ts  data-loader.ts  format.ts  simulation-engine.ts  types.ts
frontend/src/pages/: about.astro  index.astro
frontend/src/styles/: global.css
pipeline/: CLAUDE.md  Makefile  README.md  pyproject.toml
pipeline/config/: entities.yaml
pipeline/src/: cli.py
pipeline/src/extractors/: base.py  pdf.py  socrata.py
pipeline/src/models/: manifest.py  schema.py
pipeline/src/transformers/: base.py  city_of_chicago.py  trend_enricher.py
pipeline/src/validators/: budget.py
pipeline/tests/: test_extractors.py  test_models.py  test_transformers.py  test_trend_enricher.py  test_validators.py
(+55 files in other folders)
